deploy: c3e75b6b2e832f5bbf683153ccafa331f6ea710e

--- a/benchmarks/snb/index.html
+++ b/benchmarks/snb/index.html
@@ -230,7 +230,7 @@ times.</p>
 <td>9,285.86</td>
 <td>$263,282</td>
 <td><a href="https://galaxybase.com/">Galaxybase 3.3.0</a></td>
-<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
+<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8259CL @ 2.5GHz, 372GB RAM</td>
 <td><a href="https://www.galaxybase.com/">CreateLink</a></td>
 <td>2022/05/16</td>
 <td><a href="https://arxiv.org/pdf/2001.02299v2.pdf">v0.3.3</a></td>
@@ -241,7 +241,7 @@ times.</p>
 <td>8,501.21</td>
 <td>$263,282</td>
 <td><a href="https://galaxybase.com/">Galaxybase 3.3.0</a></td>
-<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
+<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8259CL @ 2.5GHz, 372GB RAM</td>
 <td><a href="https://www.galaxybase.com/">CreateLink</a></td>
 <td>2022/05/16</td>
 <td><a href="https://arxiv.org/pdf/2001.02299v2.pdf">v0.3.3</a></td>
@@ -252,7 +252,7 @@ times.</p>
 <td>8,370.52</td>
 <td>$263,282</td>
 <td><a href="https://galaxybase.com/">Galaxybase 3.3.0</a></td>
-<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8175M @ 2.5GHz, 374GB RAM</td>
+<td>AWS r5d.12xlarge instance, 48*Intel Xeon Platinum 8259CL @ 2.5GHz, 372GB RAM</td>
 <td><a href="https://www.galaxybase.com/">CreateLink</a></td>
 <td>2022/05/16</td>
 <td><a href="https://arxiv.org/pdf/2001.02299v2.pdf">v0.3.3</a></td>
