--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -317,7 +317,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 </tr>
 </tbody>
 </table>
-<h4 id="saturday-room-tba">Saturday (room TBA)</h4>
+<h4 id="saturday-room-401-402-4th-floor">Saturday (room 401-402, 4th floor)</h4>
 <table>
 <thead>
 <tr>
