--- a/benchmarks/finbench/index.html
+++ b/benchmarks/finbench/index.html
@@ -197,7 +197,11 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>LDBC FinBench (to be announced)</p>
+          <ul>
+<li><a href="/benchmarks/finbench/ldbc-finbench-introduction.pdf">Introduction presentation</a></li>
+<li><a href="/benchmarks/finbench/ldbc-finbench-announcement.pdf">Project announcement</a></li>
+<li><a href="/benchmarks/finbench/ldbc-finbench-work-charter.pdf">Work charter</a></li>
+</ul>
 
         </div>
       </div>
