deploy: 4f8aef9b6502febd6b765f118107b3b58d888ff0

--- a/benchmarks/finbench/index.html
+++ b/benchmarks/finbench/index.html
@@ -197,7 +197,8 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <ul>
+          <p>The Financial Benchmark (FinBench) project aims to define a graph database benchmark targeting financial scenarios such as anti-fraud and risk control. The FinBench is scheduled to be released in the end of 2022.</p>
+<ul>
 <li><a href="/benchmarks/finbench/ldbc-finbench-introduction.pdf">Introduction presentation</a></li>
 <li><a href="/benchmarks/finbench/ldbc-finbench-announcement.pdf">Project announcement</a></li>
 <li><a href="/benchmarks/finbench/ldbc-finbench-work-charter.pdf">Work charter</a></li>
