deploy: f470d19184bb11bf80d89737c0035eb8bbc957d9

--- a/benchmarks/graphalytics/index.html
+++ b/benchmarks/graphalytics/index.html
@@ -226,22 +226,10 @@ of experiments are carried out to evaluate different performance
 characteristics of a system-under-test.</p>
 <p>All completed benchmarks must go through a strict <strong>validation process</strong>
 to ensure the integrity of the performance results.</p>
-<p>The Graphalytics benchmarking process is made future-proof, through a
-<strong>renewal process</strong> that takes place regularly to ensure that the
-benchmark process meets the state-of-the-art development in the field of
-graph analytics.</p>
-<p>To enhance the depth of the benchmark process, Graphalytics also
-facilitates a plugin-architecture, which allows external <strong>software
-tools</strong> to be added to the benchmark harness. For instance, it is
-possible to also use SNB <strong>Datagen</strong> (the data generator of the LDBC
-Social Network Benchmark), an advanced synthetic data set generator to
-create synthetic graphs for custom test scenarios, or to use
-<strong>Granula</strong>, a fine-grained performance evaluation tool to obtain
-enriched performance results.</p>
 <p>The development of Graphalytics is supported by many active vendors in
 the field of large-scale graph analytics. Currently, Graphalytics
 already facilitates benchmark for a large number of graph analytics
-platforms, such as Giraph, GraphX, GraphMat, OpenG, and PGXD, allowing
+platforms, such as GraphBLAS, Giraph, GraphX, and PGX.D, allowing
 comparison of the state-of-the-art system performance of both
 community-driven and industrial-driven platforms. To get started, the
 details of the Graphalyics documentation and its software components are
