deploy: 42ae75dcc3af34727871416c92b9e25bf534295e

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -259,7 +259,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>11:00</td>
 <td>11:15</td>
 <td>Chen Zhang (CreateLink)</td>
-<td>New LDBC SNB benchmark record by Galaxybase: 7 times faster and 70% higher throughput</td>
+<td>New LDBC SNB benchmark record by Galaxybase: more than 6 times faster and 70% higher throughput</td>
 </tr>
 <tr>
 <td>11:20</td>
