deploy: 130dbf4d080cc78d806806b10bfa9e59a40a979b

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -228,19 +228,19 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>9:20</td>
 <td>9:30</td>
-<td>Peter Boncz (CWI)</td>
+<td>Peter Boncz (LDBC/CWI)</td>
 <td>State of the union</td>
 </tr>
 <tr>
 <td>9:30</td>
 <td>9:45</td>
-<td>Alastair Green (Birkbeck)</td>
+<td>Alastair Green (LDBC/Birkbeck)</td>
 <td>LDBC&rsquo;s fair use policies</td>
 </tr>
 <tr>
 <td>9:50</td>
 <td>10:05</td>
-<td>Gábor Szárnyas (CWI), Jack Waudby (Newcastle University)</td>
+<td>Gábor Szárnyas (LDBC/CWI), Jack Waudby (Newcastle University)</td>
 <td>LDBC Social Network Benchmark: Business Intelligence workload v1.0</td>
 </tr>
 <tr>
