deploy: 8db33afaa0e0ac0b7a8e2b5bf78fc96216282568

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -289,7 +289,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>13:20</td>
 <td>13:35</td>
 <td>Altan Birler (TU Munich)</td>
-<td>Experiences with LDBC SNB BI for optimizing the Umbra DBMS</td>
+<td>Relational databases can handle graphs too! Experiences with optimizing the Umbra RDBMS for LDBC SNB BI</td>
 </tr>
 <tr>
 <td>13:40</td>
