deploy: c837f16a596cad0a9c551f3e5f709282fae16fd6

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -277,7 +277,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>12:00</td>
 <td>12:15</td>
 <td>Mingxi Wu (TigerGraph)</td>
-<td>Conquering LDBC-SNB BI at SF-10k</td>
+<td>Conquering LDBC SNB BI at SF-10k</td>
 </tr>
 <tr>
 <td>12:20</td>
