deploy: b016135055e3c0e247ee1d937194454080215ad7

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -210,7 +210,8 @@
           
         </h5>
         <div class="content">
-          <p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
+          <p><strong>Organizers:</strong> Gábor Szárnyas, Jack Waudby, Peter Boncz, Alastair Green</p>
+<p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
 <p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and made available online.
 The tenative program is the following. <strong>All times are in EDT.</strong></p>
 <p>We will have a social event on Friday night (details TBA).</p>
