--- a/index.html
+++ b/index.html
@@ -272,8 +272,9 @@
           <h4 class="mt-0">Fifteenth TUC Meeting</h4>
         </a>
         05 Apr 2022
-        <p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
-<p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and …</p>
+        <p><strong>Organizers:</strong> Gábor Szárnyas, Jack Waudby, Peter Boncz, Alastair Green</p>
+<p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
+<p>The program consists of 10-15 minute …</p>
       </div>
       
       
