deploy: c675654c3edb89536099da7762baea546b91a3c3

--- a/organizational-members/index.html
+++ b/organizational-members/index.html
@@ -281,7 +281,7 @@
         
           <div class="col-lg-4 px-0 div-wrapper d-flex justify-content-center align-items-center">
           <a href="https://katanagraph.com/" >
-            <img src="https://ldbcouncil.org/images/members/katana-graph.jpg" alt="Katana graph" loading="lazy" class="img-fluid company-logo" >
+            <img src="https://ldbcouncil.org/images/members/katana-graph.jpg" alt="Katana Graph" loading="lazy" class="img-fluid company-logo" >
           </a>
           </div>
         
