deploy: 3c74ba78e7804bf35d06b13a67de68d4cadbc73c

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -332,7 +332,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>10:00</td>
 <td>10:15</td>
-<td>Keith Hare (WG3)</td>
+<td>Keith Hare (WG3) [<a href="fifteenth-tuc-meeting/attachments/keith-hair-property-graph-standards-process-and-timing.pdf">slides</a>]</td>
 <td>An update on the GQL &amp; SQL/PGQ standards efforts</td>
 </tr>
 <tr>
