deploy: 8533910d6c7057f221b99bf79c142c1813573ae8

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -316,6 +316,12 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>Wim Martens (University of Bayreuth)</td>
 <td>Path representations</td>
 </tr>
+<tr>
+<td>15:00</td>
+<td>15:20</td>
+<td>Audrey Cheng	(UC Berkeley)</td>
+<td>TAOBench: An End-to-End Benchmark for Social Network Workload</td>
+</tr>
 </tbody>
 </table>
 <h4 id="saturday-room-401-402-4th-floor">Saturday (room 401-402, 4th floor)</h4>
