deploy: 05a72cec63b7f35aa647e1b62410e17f9edb7846

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -247,7 +247,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>10:10</td>
 <td>10:25</td>
-<td>Shipeng Qi (Ant Group)</td>
+<td>Heng Lin (Ant Group)</td>
 <td>LDBC Financial Benchmark task force</td>
 </tr>
 <tr>
