deploy: d8b12c36ea07d8d94d11c8f813f1c01ef5ec4658

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -345,7 +345,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>10:20</td>
 <td>10:35</td>
 <td>Leonid Libkin (ENS Paris)</td>
-<td>GPML language</td>
+<td>Pattern matching in GQL and SQL/PGQ</td>
 </tr>
 <tr>
 <td>10:40</td>
