deploy: 9653be0952969d9b39daa976facc0bec8789ca1f

--- a/event/index.html
+++ b/event/index.html
@@ -214,12 +214,8 @@
 <p>LDBC is hosting a <strong>two-day</strong> hybrid workshop, co-located with <a href="https://2022.sigmod.org/venue.shtml">SIGMOD 2022</a> on <strong>June 17-18 (Friday-Saturday)</strong>.</p>
 <p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and made available online.
 The tenative program is the following. <strong>All times are in EDT.</strong></p>
-<p>We will have a social event on Friday night (details TBA).</p>
-<h4 id="friday-room-204bhttps2022sigmodorgprogramshtml">Friday (<a href="https://2022.sigmod.org/program.shtml">room 204B</a>)</h4>
-<table>
-<thead>
-<tr>
-<th>start …</th></tr></thead></table>
+<p>We will have a social event on Friday at 17:30 at <a href="https://elvezrestaurant.com/">El Vez</a> (<a href="https://g.page/ElVezPhilly">Google Maps</a>).</p>
+<h4 id="friday-room-204bhttps2022sigmodorgprogramshtml">Friday (<a href="https://2022.sigmod.org/program.shtml">room …</a></h4>
     
   </div>
 </div>
