deploy: ff5e67c7f613c1863bde89ec5d6f50b2dbca8812

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -374,7 +374,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>12:00</td>
 <td>13:30</td>
-<td><em>lunch</em></td>
+<td><em>lunch (on your own)</em></td>
 <td></td>
 </tr>
 <tr>
