deploy: e535dda458da534553ba09710b9cd8e7fd77ee02

--- a/event/index.html
+++ b/event/index.html
@@ -215,7 +215,7 @@
 <p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and made available online.
 The tenative program is the following. <strong>All times are in EDT.</strong></p>
 <p>We will have a social event on Friday at 17:30 at <a href="https://elvezrestaurant.com/">El Vez</a> (<a href="https://g.page/ElVezPhilly">Google Maps</a>).</p>
-<h4 id="friday-room-204bhttps2022sigmodorgprogramshtml">Friday (<a href="https://2022.sigmod.org/program.shtml">room …</a></h4>
+<h4 id="friday-pennsylvania-convention-center-room-204bhttps2022sigmodorgprogramshtml">Friday ( …</h4>
     
   </div>
 </div>
