--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -215,7 +215,7 @@
 <p>The program consists of 10-15 minute talks followed by a Q&amp;A session. The talks will be recorded and made available online.
 The tenative program is the following. <strong>All times are in EDT.</strong></p>
 <p>We will have a social event on Friday at 17:30 at <a href="https://elvezrestaurant.com/">El Vez</a> (<a href="https://g.page/ElVezPhilly">Google Maps</a>).</p>
-<h4 id="friday-room-204bhttps2022sigmodorgprogramshtml">Friday (<a href="https://2022.sigmod.org/program.shtml">room 204B</a>)</h4>
+<h4 id="friday-pennsylvania-convention-center-room-204bhttps2022sigmodorgprogramshtml">Friday (<a href="https://2022.sigmod.org/program.shtml">Pennsylvania Convention Center, room 204B</a>)</h4>
 <table>
 <thead>
 <tr>
@@ -324,7 +324,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 </tr>
 </tbody>
 </table>
-<h4 id="saturday-room-401-402-4th-floor">Saturday (room 401-402, 4th floor)</h4>
+<h4 id="saturday-philadelphia-marriott-downtown-room-401-402-4th-floor">Saturday (Philadelphia Marriott Downtown, room 401-402, 4th floor)</h4>
 <table>
 <thead>
 <tr>
