--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -260,7 +260,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>11:00</td>
 <td>11:15</td>
 <td>Chen Zhang (CreateLink)</td>
-<td>New LDBC SNB benchmark record by Galaxybase: more than 6 times faster and 70% higher throughput</td>
+<td>New LDBC SNB benchmark record by Galaxybase: More than 6 times faster and 70% higher throughput</td>
 </tr>
 <tr>
 <td>11:20</td>
@@ -320,7 +320,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>15:00</td>
 <td>15:20</td>
 <td>Audrey Cheng	(UC Berkeley)</td>
-<td>TAOBench: An End-to-End Benchmark for Social Network Workload</td>
+<td>TAOBench: An end-to-end Benchmark for social network workload</td>
 </tr>
 </tbody>
 </table>
