deploy: 2588a9834861da8934d2207e2b923da98ab6b7d2

--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -230,25 +230,25 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>9:20</td>
 <td>9:30</td>
 <td>Peter Boncz (LDBC/CWI)</td>
-<td>State of the union</td>
+<td>State of the union – <a href="attachments/peter-boncz-state-of-the-union.pdf">slides</a></td>
 </tr>
 <tr>
 <td>9:30</td>
 <td>9:45</td>
 <td>Alastair Green (LDBC/Birkbeck)</td>
-<td>LDBC&rsquo;s fair use policies</td>
+<td>LDBC&rsquo;s fair use policies – <a href="attachments/alastair-green-fair-use-of-the-ldbc-trademark.pdf">slides</a></td>
 </tr>
 <tr>
 <td>9:50</td>
 <td>10:05</td>
 <td>Gábor Szárnyas (LDBC/CWI), Jack Waudby (Newcastle University)</td>
-<td>LDBC Social Network Benchmark: Business Intelligence workload v1.0</td>
+<td>LDBC Social Network Benchmark: Business Intelligence workload v1.0 – <a href="attachments/gabor-szarnyas-ldbc-snb-bi.pdf">slides</a></td>
 </tr>
 <tr>
 <td>10:10</td>
 <td>10:25</td>
 <td>Heng Lin (Ant Group)</td>
-<td>LDBC Financial Benchmark task force</td>
+<td>LDBC Financial Benchmark task force – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>10:30</td>
@@ -260,25 +260,25 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>11:00</td>
 <td>11:15</td>
 <td>Chen Zhang (CreateLink)</td>
-<td>New LDBC SNB benchmark record by Galaxybase: More than 6 times faster and 70% higher throughput</td>
+<td>New LDBC SNB benchmark record by Galaxybase: More than 6 times faster and 70% higher throughput – <a href="https://youtu.be/sMzTsb8iw_Y">video</a></td>
 </tr>
 <tr>
 <td>11:20</td>
 <td>11:35</td>
 <td>James Clarkson (Neo4j)</td>
-<td>LDBC benchmarks: Promoting good science and industrial consumption</td>
+<td>LDBC benchmarks: Promoting good science and industrial consumption – <a href="attachments/james-clarkson-ldbc-benchmarks-promoting-good-science-and-industrial-consumption.pdf">slides</a></td>
 </tr>
 <tr>
 <td>11:40</td>
 <td>11:55</td>
 <td>Oskar van Rest (Oracle)</td>
-<td>Creating and querying property graphs in Oracle, on-premise and in the cloud</td>
+<td>Creating and querying property graphs in Oracle, on-premise and in the cloud – <a href="attachments/oskar-van-rest-creating-and-querying-property-graphs-in-oracle-on-premise-and-in-the-cloud.pdf">slides</a></td>
 </tr>
 <tr>
 <td>12:00</td>
 <td>12:15</td>
 <td>Mingxi Wu (TigerGraph)</td>
-<td>Conquering LDBC SNB BI at SF-10k</td>
+<td>Conquering LDBC SNB BI at SF-10k – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>12:20</td>
@@ -290,37 +290,37 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>13:20</td>
 <td>13:35</td>
 <td>Altan Birler (TU Munich)</td>
-<td>Relational databases can handle graphs too! Experiences with optimizing the Umbra RDBMS for LDBC SNB BI</td>
+<td>Relational databases can handle graphs too! Experiences with optimizing the Umbra RDBMS for LDBC SNB BI – <a href="attachments/altan-birler-relational-databases-can-handle-graphs-too.pdf">slides</a></td>
 </tr>
 <tr>
 <td>13:40</td>
 <td>13:55</td>
 <td>David Püroja (CWI)</td>
-<td>LDBC Social Network Benchmark: Interactive workload v2.0</td>
+<td>LDBC Social Network Benchmark: Interactive workload v2.0 – <a href="attachments/david-puroja-ldbc-snb-interactive-workload-v2.0">slides</a></td>
 </tr>
 <tr>
 <td>14:00</td>
 <td>14:15</td>
 <td>Angela Bonifati (Lyon 1 University)</td>
-<td>The quest for schemas in graph databases</td>
+<td>The quest for schemas in graph databases – <a href="attachments/angela-bonifati-the-quest-for-schemas-in-graph-databases.pdf">slides</a></td>
 </tr>
 <tr>
 <td>14:20</td>
 <td>14:35</td>
 <td>Matteo Lissandrini (Aalborg University)</td>
-<td>Understanding graph data representations in triplestores</td>
+<td>Understanding graph data representations in triplestores – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>14:40</td>
 <td>14:55</td>
 <td>Wim Martens (University of Bayreuth)</td>
-<td>Path representations</td>
+<td>Path representations – <a href="attachments/wim-martens-path-representations.pdf">slides</a></td>
 </tr>
 <tr>
 <td>15:00</td>
 <td>15:20</td>
 <td>Audrey Cheng	(UC Berkeley)</td>
-<td>TAOBench: An end-to-end Benchmark for social network workload</td>
+<td>TAOBench: An end-to-end benchmark for social network workload – <a href="attachments/">slides</a></td>
 </tr>
 </tbody>
 </table>
@@ -338,38 +338,38 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <tr>
 <td>10:00</td>
 <td>10:15</td>
-<td>Keith Hare (WG3) [<a href="attachments/keith-hare-property-graph-standards-process-and-timing.pdf">slides</a>]</td>
-<td>An update on the GQL &amp; SQL/PGQ standards efforts</td>
+<td>Keith Hare (WG3)</td>
+<td>An update on the GQL &amp; SQL/PGQ standards efforts  – <a href="attachments/keith-hare-property-graph-standards-process-and-timing.pdf">slides</a></td>
 </tr>
 <tr>
 <td>10:20</td>
 <td>10:35</td>
 <td>Leonid Libkin (ENS Paris)</td>
-<td>Pattern matching in GQL and SQL/PGQ</td>
+<td>Pattern matching in GQL and SQL/PGQ  – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>10:40</td>
 <td>10:55</td>
 <td>Petra Selmer (Neo4j/WG3)</td>
-<td>An overview of GQL</td>
+<td>An overview of GQL – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>11:00</td>
 <td>11:15</td>
 <td>Alastair Green (LDBC/WG3)</td>
-<td>Technical manifesto for GQL 2.0</td>
+<td>Technical manifesto for GQL 2.0 – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>11:20</td>
 <td>11:35</td>
 <td>George Fletcher (TU Eindhoven)</td>
-<td>PG-Keys (LDBC Property Graph Schema Working Group)</td>
+<td>PG-Keys (LDBC Property Graph Schema Working Group) – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>11:40</td>
 <td>11:55</td>
 <td>Arvind Shyamsundar (Microsoft)</td>
-<td>Graph capabilities in Microsoft SQL Server and Azure SQL Database</td>
+<td>Graph capabilities in Microsoft SQL Server and Azure SQL Database – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>12:00</td>
@@ -381,37 +381,37 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>13:30</td>
 <td>13:45</td>
 <td>Daniël ten Wolde (CWI)</td>
-<td>Implementing SQL/PGQ in DuckDB</td>
+<td>Implementing SQL/PGQ in DuckDB – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>13:50</td>
 <td>14:05</td>
 <td>Oszkár Semeráth, Kristóf Marussy (TU Budapest)</td>
-<td>Generation techniques for consistent, realistic, diverse, and scalable graphs</td>
+<td>Generation techniques for consistent, realistic, diverse, and scalable graphs – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>14:10</td>
 <td>14:25</td>
 <td>Molham Aref (RelationalAI)</td>
-<td>Graph Normal Form</td>
+<td>Graph Normal Form – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>14:30</td>
 <td>14:45</td>
 <td>Naomi Arnold (Queen Mary University of London)</td>
-<td>Investigating the Alt-Right Network Gab with Temporal Interaction Graphs</td>
+<td>Investigating the Alt-Right Network Gab with Temporal Interaction Graphs – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>14:50</td>
 <td>15:05</td>
 <td>Domagoj Vrgoč (PUC Chile)</td>
-<td>Evaluating path queries in MillenniumDB</td>
+<td>Evaluating path queries in MillenniumDB – <a href="attachments/">slides</a></td>
 </tr>
 <tr>
 <td>15:10</td>
 <td>15:25</td>
 <td>Pavel Klinov, Evren Sirin (Stardog)</td>
-<td>Stardog&rsquo;s experience with LDBC</td>
+<td>Stardog&rsquo;s experience with LDBC – <a href="attachments/">slides</a></td>
 </tr>
 </tbody>
 </table>
