--- a/event/fifteenth-tuc-meeting/index.html
+++ b/event/fifteenth-tuc-meeting/index.html
@@ -296,7 +296,7 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>13:40</td>
 <td>13:55</td>
 <td>David Püroja (CWI)</td>
-<td>LDBC Social Network Benchmark: Interactive workload v2.0 – <a href="attachments/david-puroja-ldbc-snb-interactive-workload-v2.0">slides</a></td>
+<td>LDBC Social Network Benchmark: Interactive workload v2.0 – <a href="attachments/david-puroja-ldbc-snb-interactive-workload-v2.0.pdf">slides</a></td>
 </tr>
 <tr>
 <td>14:00</td>
@@ -345,13 +345,13 @@ The tenative program is the following. <strong>All times are in EDT.</strong></p
 <td>10:20</td>
 <td>10:35</td>
 <td>Leonid Libkin (ENS Paris)</td>
-<td>Pattern matching in GQL and SQL/PGQ  – <a href="attachments/">slides</a></td>
+<td>Pattern matching in GQL and SQL/PGQ  – <a href="attachments/pattern-matching-in-gql-and-sql-pgq.pdf">slides</a></td>
 </tr>
 <tr>
 <td>10:40</td>
 <td>10:55</td>
 <td>Petra Selmer (Neo4j/WG3)</td>
-<td>An overview of GQL – <a href="attachments/">slides</a></td>
+<td>An overview of GQL – <a href="attachments/petra-selmer-towards-gql-v1-a-property-graph-query-language-standard.pdf">slides</a></td>
 </tr>
 <tr>
 <td>11:00</td>
